--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
     {% if user.is_authenticated %}
         <div class="container container-header">
             <div class="page-header">
-                <h1>Predmeti</h1>
+                <h1><b>Predmeti</b></h1>
             </div>
             <ul class="years">
                 <li>
@@ -21,7 +21,7 @@
     {% else %}
         <div class="container container-header">
             <div class="page-header">
-                <h1>Uvod u objektno orijntirano programiranje</h1>
+                <h1>Uvod u objektno orijentirano programiranje</h1>
             </div>
         </div>
     {% endif %}
