--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,11 @@
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container ">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="">UOOP</a>
+                    {% if user.is_authenticated %}
+                        <a class="navbar-brand" href="http://127.0.0.1:8000/home">UOOP</a>
+                    {% else %}
+                        <a class="navbar-brand" href="">UOOP</a>
+                    {% endif %}
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
