--- a/templates/course.html
+++ b/templates/course.html
@@ -3,7 +3,7 @@
     <div class="container container-header">
         <div class="page-header">
             <h1>
-                {{ course.title }}
+                <b>{{ course.title }}</b>
                 <small>2019/2020</small>
             </h1>
         </div>
