--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="container container-header">
       <div class="page-header">
-        <h1>Uvod u objektno orijntirano programiranje</h1>
+        <h1>Uvod u objektno orijentirano programiranje</h1>
       </div>
     </div>
 {% endblock content %}
