--- a/templates/test.html
+++ b/templates/test.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <div class="container container-header">
-    <h1>{{test.title}}</h1>
+    <h1><b>{{test.title}}</b></h1>
     <div class="dataTables_wrapper form-inline dt-bootstrap no-footer">
         <div class="row">
             <div class="col-sm-6">
@@ -45,25 +46,31 @@
                     </thead>
                     <tbody>
                         {% for assignment in assignments %}
-                        <tr role="row" class="odd">
-                            <td class="result">
-                                <span class="glyphicon_green glyphicon glyphicon-ok"></span>
-                            </td>
-                            <td>
-                                <a href="{% url 'uoop:assignment' assignment.id %}">{{assignment.title}}</a>
-                            </td>
-                            <td class="testresults">
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                                        100%
+                            <tr role="row" class="odd">
+                                <td class="result">
+                                    {% if assignment.percentage == 100 %}
+                                        <span class="glyphicon_green glyphicon glyphicon-ok" style="color: green;"></span>
+                                    {% else %}    
+                                        <span class="glyphicon glyphicon-remove" style="color: red;"></span>
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    <a href="{% url 'uoop:assignment' assignment.id %}">{{ assignment.title }}</a>
+                                </td>
+                                <td class="testresults">
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ assignment.percentage }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ assignment.percentage }}%"> <!--iako baca error, svejedno radi kako treba, ako dodas jos '' onda ne prikazuje kako treba-->
+                                            {{ assignment.percentage }}%
+                                        </div>
                                     </div>
-                                </div>
-                            </td>
-                            <td class="tags ellipsis" title="izlaz, ulaz">
-                                <button class="btn btn-primary btn-xs" type="button">izlaz</button>
-                                <button type="button" class="btn btn-primary btn-xs">ulaz</button>
-                            </td>
-                        </tr>
+                                </td>
+                                <td class="tags ellipsis" title="izlaz, ulaz">
+                                    <!-- <span>{{ assignment.tags.name }}</span> kaze da je none ??-->
+                                    {% for tag in assignment.tags.all %}
+                                        <button type="button" class="btn btn-primary btn-xs">{{ tag.name }}</button>
+                                    {% endfor %}
+                                </td>
+                            </tr>
                         {% endfor %}
                         <tr role="row" class="odd">
                             <td class="result">
@@ -109,7 +116,7 @@
         </div>
         <div class="row">
             <div class="col-sm-5">
-                <div class="dataTables_info" id="challenges_info" role="status" aria-live="polite">1 - 10 od 71</div>
+                <div class="dataTables_info" id="challenges_info" role="status" aria-live="polite">1 - 10 od {{ assignments|length }}</div>
             </div>
             <div class="col-sm-7">
                 <div class="dataTables_paginate paging_simple_numbers" id="challenges_paginate">
