--- a/templates/test.html
+++ b/templates/test.html
@@ -1,157 +1,124 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<div class="container container-header">
-    <h1><b>{{test.title}}</b></h1>
-    <div class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="dataTables_length">
-                    <label>
-                        Prikaži:
-                        <select>
-                            <option value="10">10</option>
-                            <option value="20">20</option>
-                            <option value="30">30</option>
-                            <option value="40">40</option>
-                            <option value="50">50</option>
-                            <option value="60">60</option>
-                            <option value="-1">Svi</option>
-                        </select>
-                    </label>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div id="challenges_filter" class="dataTables_filter">
-                    <label>
-                        <input type="search" class="form-control input-sm" placeholder="Pretraži" aria-controls="challenges">
-                    </label>
-                </div>
-            </div>    
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <table id="challenges" role="grid" aria-describedby="challenges_info" class="table table-hover dataTable no-footer">
-                    <thead>
-                        <tr role="row">
-                            <th class="result sorting_disabled" rowspan="1" colspan="1" style="width: 28px;"></th>
-                            <th class="title sorting_disabled" rowspan="1" colspan="1" style="width: 574px;">Zadatak</th>
-                            <th class="testresults sorting_disabled" rowspan="1" colspan="1" style="width: 100px;">Rezultat</th>
-                            <th class="tags sorting_disabled" rowspan="1" colspan="1" style="width: 205px; margin-bottom: 10px;">
-                                <span class="glyphicon glyphicon-tags"></span>
-                                Tagovi
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for assignment in assignments %}
-                            <tr role="row" class="odd">
-                                <td class="result">
-                                    {% if assignment.percentage == 100 %}
-                                        <span class="glyphicon_green glyphicon glyphicon-ok" style="color: green;"></span>
-                                    {% else %}    
-                                        <span class="glyphicon glyphicon-remove" style="color: red;"></span>
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    <a href="{% url 'uoop:assignment' assignment.id %}">{{ assignment.title }}</a>
-                                </td>
-                                <td class="testresults">
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ assignment.percentage }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ assignment.percentage }}%"> <!--iako baca error, svejedno radi kako treba, ako dodas jos '' onda ne prikazuje kako treba-->
-                                            {{ assignment.percentage }}%
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="tags ellipsis" title="izlaz, ulaz">
-                                    <!-- <span>{{ assignment.tags.name }}</span> kaze da je none ??-->
-                                    {% for tag in assignment.tags.all %}
-                                        <button type="button" class="btn btn-primary btn-xs">{{ tag.name }}</button>
-                                    {% endfor %}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        <tr role="row" class="odd">
-                            <td class="result">
-                                <span class="glyphicon_green glyphicon glyphicon-ok"></span>
-                            </td>
-                            <td>
-                                <a href="">Zadatak 2</a>
-                            </td>
-                            <td class="testresults">
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                        60%
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="tags ellipsis" title="izlaz, ulaz">
-                                <button class="btn btn-primary btn-xs" type="button">izlaz</button>
-                                <button type="button" class="btn btn-primary btn-xs">ulaz</button>
-                            </td>
-                        </tr>
-                        <tr role="row" class="odd">
-                            <td class="result">
-                                <span class="glyphicon_green glyphicon glyphicon-ok"></span>
-                            </td>
-                            <td>
-                                <a href="">Zadatak 3</a>
-                            </td>
-                            <td class="testresults">
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-                                        30%
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="tags ellipsis" title="izlaz, ulaz">
-                                <button class="btn btn-primary btn-xs" type="button">izlaz</button>
-                                <button type="button" class="btn btn-primary btn-xs">ulaz</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-5">
-                <div class="dataTables_info" id="challenges_info" role="status" aria-live="polite">1 - 10 od {{ assignments|length }}</div>
-            </div>
-            <div class="col-sm-7">
-                <div class="dataTables_paginate paging_simple_numbers" id="challenges_paginate">
-                    <ul class="pagination">
-                        <li class="paginate_button previous disabled" id="challenges_previous">
-                            <a href="" aria-controls="challenges" data-dt-idx="0" tabindex="0">Prethodna</a> 
-                        </li>
-                        <li class="paginate_button active">
-                            <a href="" aria-controls="challenges" data-dt-idx="1" tabindex="0">1</a>
-                        </li>
-                        <li class="paginate_button">
-                            <a href="" aria-controls="challenges" data-dt-idx="2" tabindex="0">2</a>
-                        </li>
-                        <li class="paginate_button">
-                            <a href="" aria-controls="challenges" data-dt-idx="3" tabindex="0">3</a>
-                        </li>
-                        <li class="paginate_button">
-                            <a href="" aria-controls="challenges" data-dt-idx="4" tabindex="0">4</a>
-                        </li>
-                        <li class="paginate_button">
-                            <a href="" aria-controls="challenges" data-dt-idx="5" tabindex="0">5</a>
-                        </li>
-                        <li class="paginate_button disabled" id="challenge_ellipsis">
-                            <a href="" aria-controls="challenges" data-dt-idx="6" tabindex="0">...</a>
-                        </li>
-                        <li class="paginate_button">
-                            <a href="" aria-controls="challenges" data-dt-idx="7" tabindex="0">8</a>
-                        </li>
-                        <li class="paginate_button next" id="challenges_next">
-                            <a href="" aria-controls="challenges" data-dt-idx="8" tabindex="0">Sljedeća</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+<style>
+    .dataTables_filter { /* tako da hide-a njihov default search button*/
+        display: none;
+    }
+</style>
+<div style="width: 80%; margin-left: 10%">
+    <h2><b>{{test.title}}</b></h2>
+    <div style="/*position: absolute; right: 200px*/"> <!-- ne radi input ako styleam?????-->
+        <input id="input" placeholder="pretrazi" />
     </div>
+    <table id="example" class="table /*table-striped*/ /*table-bordered*/" style="width:100%">
+      <thead>
+          <tr>
+              <th></th>
+              <th>Zadatak</th>
+              <th>Rezultat</th>
+              <th>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-tags-fill"
+                        viewBox="0 0 16 16">
+                    <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+                    <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
+                </svg>
+                  Tagovi</th>
+          </tr>
+      </thead>
+      <tbody>
+        {% for assignment in assignments %}
+            <tr role="row" class="odd">
+                <td class="result">
+                    {% if assignment.percentage == 100 %}
+                        <i class="fa-solid fa-check" style="color: green;"></i>
+                    {% else %}    
+                        <i class="fa-solid fa-xmark" style="color: red;"></i>
+                    {% endif %}
+                </td>
+                <td>
+                    <a href="{% url 'uoop:assignment' assignment.id %}">{{ assignment.title }}</a>
+                </td>
+                <td class="testresults">
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="{{ assignment.percentage }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ assignment.percentage }}%"> <!--iako baca error, svejedno radi kako treba, ako dodas jos '' onda ne prikazuje kako treba-->
+                            {{ assignment.percentage }}%
+                        </div>
+                    </div>
+                </td>
+                <td class="tags ellipsis" title="izlaz, ulaz">
+                    <!-- <span>{{ assignment.tags.name }}</span> kaze da je none ??-->
+                    {% for tag in assignment.tags.all %}
+                        <button type="button" class="btn btn-primary btn-xs">{{ tag.name }}</button>
+                    {% endfor %}
+                </td>
+            </tr>
+        {% endfor %}
+        <tr role="row" class="odd">
+            <td class="result">
+                <span class="glyphicon_green glyphicon glyphicon-ok"></span>
+            </td>
+            <td>
+                <a href="">Zadatak 2</a>
+            </td>
+            <td class="testresults">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                        60%
+                    </div>
+                </div>
+            </td>
+            <td class="tags ellipsis" title="izlaz, ulaz">
+                <button class="btn btn-primary btn-xs" type="button">izlaz</button>
+                <button type="button" class="btn btn-primary btn-xs">ulaz</button>
+            </td>
+        </tr>
+        <tr role="row" class="odd">
+            <td class="result">
+                <span class="glyphicon_green glyphicon glyphicon-ok"></span>
+            </td>
+            <td>
+                <a href="">Zadatak 3</a>
+            </td>
+            <td class="testresults">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+                        30%
+                    </div>
+                </div>
+            </td>
+            <td class="tags ellipsis" title="izlaz, ulaz">
+                <button class="btn btn-primary btn-xs" type="button">izlaz</button>
+                <button type="button" class="btn btn-primary btn-xs">ulaz</button>
+            </td>
+        </tr>
+    </tbody>
+  </table>
 </div>
+
+<script>
+  // $(document).ready(function() {
+  //     $('#example').DataTable({
+  //         "ordering": false,
+  //     });
+  // } );
+  oTable = $('#example').DataTable({
+      "ordering": false,
+      // "searching": false,
+      // "bFilter": false,
+      // "dom": "lrt",
+  });
+  $('#input').keyup(function(){ //za custom search button
+      oTable.search($(this).val()).draw() ;
+  })
+  // $("example_filter").css("display", "none")
+  // $("example_filter").addClass("hidden")
+  // document.getElementById("example_length").innerHTML = "ej"
+  // document.getElementById("example_length").innerHTML = document.getElementsByClassName("custom-select custom-select-sm form-control form-control-sm")[0]
+//   document.write(document.getElementsByClassName("custom-select custom-select-sm form-control form-control-sm")[0])
+</script>
 {% endblock content %}
