--- a/templates/assignment.html
+++ b/templates/assignment.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container ">
+    <div class="container page-top-offset" style="margin: 0px; /*font-family: 'NotoSerif';*/"> <!-- nije isto ko na prog.riteh.hr s ovim fontom -->
         <p>
             <i class="fa-solid fa-arrow-left"></i>
             <!-- <a href="{{ assignment.test }}">P1 2019 Zadaci za vježbu</a> -->
             <!-- <a href="#" onclick="redirect('{{ assignment.test.id }}')">{{ assignment.test.title }}</a> -->
             <a href="http://127.0.0.1:8000/test/{{ assignment.test.id }}">{{ assignment.test.title }}</a>
         </p>
+        <br>
         <h2><b>{{ assignment.title }}</b></h2>
         
         <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -21,34 +22,65 @@
             </li>
         </ul>
         <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="zadatak" role="tabpanel" aria-labelledby="zadatak-tab">
+        <div class="tab-pane fade show active" style="margin-left: 15px;" id="zadatak" role="tabpanel" aria-labelledby="zadatak-tab"> <!-- bez ovog margin left viri malo a ovi ostali ne, nez zas-->
             <div class="row">
-                <div class="content">
-                    <p>
-                        {{ assignment.description }}
+                <div class="content" style="margin-right: 30px; max-width: 60%;">
+                    <div style="margin-top: 20px;">
+                        <p>
+                            {{ assignment.description|safe }}
+                        </p>
+                    </div>
+                    <h3 id="ulazni-podaci">
+                        <b>Ulaz</b>
+                    </h3>
+                    <p id="ulaz">
+                        {{ assignment.inputDescription|safe }} <!-- safe -> tako da ako je npr <b>ej</b> rendera kao html a ne kao string -->
                     </p>
-                    <h2 id="ulazni-podaci">
-                        <b>Ulazni podaci</b>
-                    </h2>
+                    <h3 id="izlazni-podaci">
+                        <b>Izlaz</b>
+                    </h3>
                     <p>
-                        {{ assignment.inputDescription }}
-                    </p>
-                    <h2 id="izlazni-podaci">
-                        <b>Izlazni podaci</b>
-                    </h2>
-                    <p>
-                        {{ assignment.outputDescription }}
+                        {{ assignment.outputDescription|safe }}
                     </p>
                     {% for visibleTest in visibleTests %}
-                        <h2>
+                    <div style="margin-bottom: 30px">
+                        <h3 style="margin-bottom: 20px;">
                             <b>Ispitni uzorak #{{ forloop.counter }}</b>
-                        </h2>
-                        <h3>
-                            <span><b>Ulaz</b></span><span><b>Izlaz</b></span>
                         </h3>
-                        <div class="sample">
-                            <pre class="input"><code id="tc-in-3022">{{visibleTest.input}}</code></pre><pre class="output"><code id="tc-out-3022">{{visibleTest.output}}</code></pre>
+                        <div style="display: flex; position: relative;"> <!-- row -->
+                            <div style="flex-grow: 1; margin-right: 2px;  display:flex; flex-direction: column;"> <!-- column -->
+                                <div class="input-output-header">
+                                    <h5>
+                                        <span><b>Ulaz</b></span>    
+                                    </h5>
+                                </div>
+                                <div class="test-case" style="position: relative; flex-grow: 1;">
+                                    <!-- <pre class="input"><code id="tc-in-3022">{{visibleTest.input}}</code></pre> -->
+                                    <code id="input-code-{{ forloop.counter }}">{{visibleTest.input}}</code>
+                                    <!-- <button style="position: absolute; margin: 0px; right: 0px; bottom: 0px; height: 30px; width: 70px; text-align: center; display: inline-block; font-size: 12px;" type="button" id="input-copy-btn-{{ forloop.counter }}" class="btn btn-primary copy-btn" onclick="copyClick(this)"><span>Kopiraj</span></button> -->
+                                    <span style="position: absolute; margin: 0px; right: 0px; bottom: 0px; height: 20px; width: 70px; text-align: center; display: inline-block; font-size: 12px; border-radius: 4px;" type="button" id="input-copy-btn-{{ forloop.counter }}" class="btn-primary copy-btn" onclick="copyClick(this)"><i class="fa-solid fa-copy"></i> Kopiraj</span>
+                                </div>
+                            </div>
+                            <div style="flex-grow: 1; display:flex; flex-direction: column;"> <!-- column -->
+                                <div class="input-output-header">
+                                    <h5>
+                                        <span><b>Izlaz</b></span>
+                                    </h5>
+                                </div>
+                                <div class="test-case" style="position: relative; flex-grow: 1;">
+                                    <code id="output-code-{{ forloop.counter }}">{{visibleTest.output}}</code>
+                                    <span style="position: absolute; margin: 0px; right: 0px; bottom: 0px; height: 20px; width: 70px; text-align: center; display: inline-block; font-size: 12px; border-radius: 4px;" type="button" id="output-copy-btn-{{ forloop.counter }}" class="btn-primary copy-btn" onclick="copyClick(this)"><i class="fa-solid fa-copy"></i> Kopiraj</span>
+                                </div>
+                            </div>
                         </div>
+                    
+
+                        <!-- <h3>
+                            <span><b>Ulaz</b></span><span><b>Izlaz</b></span>
+                        </h3> -->
+                        <!-- <div class="sample">
+                            <pre class="input"><code id="tc-in-3022">{{visibleTest.input}}</code></pre><pre class="output"><code id="tc-out-3022">{{visibleTest.output}}</code></pre>
+                        </div> -->
                         {% comment %} <div class="copy-btns">
                             <div>
                                 <span class="btn-copy" data-toggle="tooltip" data-placement="bottom" data-trigger="manual" data-original-title="Kopirano!" data-target="tc-in-3022">Kopiraj</span>
@@ -59,11 +91,12 @@
                         </div> {% endcomment %}
                         {% if visibleTest.hint %}
                             <blockquote class="hint">
-                                <p>
-                                    {{ visibleTest.hint }}
-                                </p>
+                                <div>
+                                    {{ visibleTest.hint|safe }}
+                                </div>
                             </blockquote>
                         {% endif %}
+                    </div>
                     {% endfor %}
                 </div>
                 <div class="aside">
@@ -77,7 +110,7 @@
                             <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
                             <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
                         </svg>
-                        Tagovi
+                        <b>Tagovi</b>
                     </h3>
                     {% for tag in tags %}
                         <!-- <button type="button" class="btn btn-default">
@@ -400,5 +433,26 @@
     $(document).ready( function () {
     $('#myTable').DataTable();
 } );
-    </script>  -->
+</script>  -->
+<script>
+    let intervalId
+    const copyClick = (e) => {
+        // console.log(e);
+        // console.log(e.id);
+        tmp = e.id.split("-")
+        // console.log(tmp);
+        // console.log(tmp[0] + "-" + "copy" + "-" + tmp.slice(-1))
+        // console.log(document.getElementById(tmp[0] + "-" + "code" + "-" + tmp.slice(-1)).innerHTML)
+        navigator.clipboard.writeText(document.getElementById(tmp[0] + "-" + "code" + "-" + tmp.slice(-1)).innerHTML)
+        document.getElementById(e.id).innerHTML = "<i class='fa-solid fa-copy'></i> Kopirano!"
+        document.getElementById(e.id).style.width = "90px"
+        
+        clearInterval(intervalId)
+        
+        intervalId = setInterval(() => {
+            document.getElementById(e.id).innerHTML = "<i class='fa-solid fa-copy'></i> Kopiraj"
+            document.getElementById(e.id).style.width = "70px"
+        }, 500)
+    }
+</script>
 {% endblock content %}
