--- a/templates/course.html
+++ b/templates/course.html
@@ -10,9 +10,11 @@
         border-bottom: 1px solid rgba(133, 133, 133, 0.5);
         margin-bottom: 30px;
     }
-   
+   div {
+       margin: 0px;
+   }
 </style>
-    <div class="container container-header">
+    <div class="container container-header page-top-offset" style="margin: 0px">
         <div class="page-header">
             <h1>
                 <b>{{ course.title }}</b>
