--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,7 +18,7 @@
         <title>AAI@localhost</title>
         <script type="text/javascript">
 		function sf() {
-			document.getElementById("id_username").focus();
+			document.getElementById("id_email").focus();
 		}
 		
         </script>
