Grouped courses by their school year.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,38 +1,30 @@
 {% extends "base.html" %}
+{% load filter %}
 {% block content %}
-<style>
-    ul {
-        list-style-type: none;
-        font-size: 1.3em;
-    }
-    ul div {
-        border-top: 1px solid rgba(133, 133, 133, 0.2);
-        border-bottom: 1px solid rgba(133, 133, 133, 0.2);
-        font-size: 1.5em;
-        width: 100%;
-    }
-</style>
+<div>
     {% if user.is_authenticated %}
-        <div class="container container-header page-top-offset" style="margin: 0px" id="ajde"> <!-- jedino ovako override-a margin inace nece-->
+        <div class="container container-header page-top-offset home-page" style="margin: 0px"> <!-- jedino ovako override-a margin inace nece-->
             <div class="page-header">
                 <h1><b>Predmeti</b></h1>
             </div>
             <br>
-            <ul class="years">
-                <div>2019/2020</div>
-                <li>
-                    <ul class="courses">
-                        {% for course in courses %}
-                            <li>
-                                <a href="/course/{{ course.id }}/">{{ course.title }}</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </li>
+            <ul style="padding: 0px;">
+                {% for key, subCourses in courses.items %}
+                    <div>{{ subCourses|getCourseDate:"start" }}/{{ subCourses|getCourseDate:"end" }}</div>        
+                    <li>
+                        <ul>
+                            {% for course in subCourses %}
+                                <li>
+                                    <a href="/course/{{ course.id }}/">{{ course.title }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                {% endfor %}
             </ul>
         </div>
     {% else %}
-        <div class="container container-header" style="margin: 0px">
+        <div class="container container-header page-top-offset home-page" style="margin: 0px">
             <div class="page-header">
                 <h1>Uvod u objektno orijentirano programiranje</h1>
             </div>
