--- a/templates/course.html
+++ b/templates/course.html
@@ -1,47 +1,21 @@
 {% extends "base.html" %}
+{% load filter %}
 {% block content %}
-<style>
-    ul {
-        list-style-type: none;
-        font-size: 1.3em;
-    }
-
-    .page-header {
-        border-bottom: 1px solid rgba(133, 133, 133, 0.5);
-        margin-bottom: 30px;
-    }
-   div {
-       margin: 0px;
-   }
-</style>
-    <div class="container container-header page-top-offset" style="margin: 0px">
-        <div class="page-header">
-            <h1>
-                <b>{{ course.title }}</b>
-                <small style="color: grey;">2019/2020</small>
-            </h1>
-        </div>
-        
-            {% comment %} 
-            <div class="contest-title">
-            <span class="glyphicon_clock glyphicon glyphicon-time"></span>
-            <a href="/course/{{ course.id }}/">{{ course.title }} {{ course.startDate }}/{{ course.endDate }}</a>
-            </div>
-            {% endcomment %}
-            <ul>
-            {% for test in tests %}
-                <!-- <div class="contest-title">
-                    <span class="glyphicon_clock glyphicon glyphicon-time"></span>
-                    <a href="{% url 'uoop:test' test.id %}">{{ test.title }}</a>
-                </div> -->
-                <li>
-                    <i class="fa-solid fa-clock" style="/*color: black; background-color: white;*/"></i>
-                    <!-- <i class="fa-regular fa-clock-three"></i> -->
-                    <!-- <i class="fa-solid fa-xmark" style="color: red;"></i> -->
-                    <a href="{% url 'uoop:test' test.id %}">{{ test.title }}</a>
-                </li>
-            {% endfor %}
-            </ul>
-        
+<div class="container container-header page-top-offset course-page" style="margin: 0px"> <!-- potrebno da je tu style jer inace ne overridea ga -->
+    <div class="course-page-header">
+        <h1>
+            <b>{{ course.title }}</b>
+            <small style="color: grey;">{{ course|getSchoolYear }}</small>
+        </h1>
     </div>
+    <ul>
+    {% for test in tests %}
+        <li>
+            <i class="fa-solid fa-clock" style="/*color: black; background-color: white;*/"></i>
+            <!-- <i class="fa-regular fa-clock-three"></i> -->
+            <a href="{% url 'uoop:test' test.id %}">{{ test.title }}</a>
+        </li>
+    {% endfor %}
+    </ul>
+</div>
 {% endblock content %}
